--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@shopify/cli": "3.22.0",
     "@shopify/cli-hydrogen": "3.22.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2",
     "vite": "^2.9.13"
   },
   "dependencies": {
