--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@shopify/cli": "3.22.0",
     "@shopify/cli-hydrogen": "3.22.0",
     "autoprefixer": "^10.4.13",
+    "dotenv": "^16.0.3",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2",
     "vite": "^2.9.13"
